src/objects/Cal__Astrea_Task_Reminder__c.object
<CustomObject>
    <fields>
        <fullName>Cal__Event_Scheduled_Job_Id__c</fullName>
        <label>Event Scheduled Job Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cal__Send_Reminder_for_Today_or_TomorrowEvent__c</fullName>
        <label>Send Reminder On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day Of Meeting</fullName>
                </value>
                <value>
                    <fullName>Day Before Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cal__Send_Reminder_for_Today_or_Tomorrow__c</fullName>
        <label>Send Reminder On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day Of Meeting</fullName>
                </value>
                <value>
                    <fullName>Day Before Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cal__Send_Reminder_to_Related_ContactEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder to &apos;Related Contact&apos;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cal__Send_Reminder_to_Related_To_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder to &apos;Related Attendees&apos;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cal__Send_Reminder_to_Related_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder to &apos;Related Contact&apos;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cal__Task_Scheduled_Job_Id__c</fullName>
        <label>Task Scheduled Job Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cal__Task_or_Event_Remainder__c</fullName>
        <label>Task or Event Reminder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Task Reminder</fullName>
                </value>
                <value>
                    <fullName>Event Reminder</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cal__Time_for_Event_Scheduling__c</fullName>
        <label>Time for Event Scheduling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cal__Time_for_Task_Scheduling__c</fullName>
        <label>Time for Task Scheduling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cal__Type_of_Event__c</fullName>
        <label>Type of Event</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cal__Type_of_Task__c</fullName>
        <label>Type of Task</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Astrea Task &amp; Event Reminder</label>
    <nameField>
        <label>Astrea Task &amp; Event Reminder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Astrea Task &amp; Event Reminder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>